@@ -1,6 +1,10 @@
 Changes from 1.1 to 1.2
 =======================
 
+- bug fixes
+- perfomance enhancements
+- added show/hide grid on printout option
+
 Until beta1:
 ------------
 
